# planifia

./: .gitignore  main.py  pyproject.toml
src/: db.sqlite3
src/apps/projects/: admin.py  models.py
src/apps/projects/templates/project_template/: list.html
src/apps/tasks/: models.py  views.py
src/apps/tasks/templates/: index.html
src/apps/tasks/templates/project/: details.html  list.html
src/apps/tasks/templates/project_template/: details.html
src/apps/tasks/templates/task_template/: details.html
src/apps/tasks/templates/task_type/: details.html  list.html
src/apps/tenants/: models.py
src/apps/users/: forms.py  models.py
src/apps/users/migrations/: 0001_initial.py  0002_customuser_tenant.py
src/apps/users/templates/users/: create_user.html  user_list.html
src/area/: asgi.py  settings.py  urls.py  wsgi.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: models.py
src/templates/: base.html
src/templates/includes/: footer.html  header.html
src/users/: models.py  views.py
