[project]
name = "area"
version = "0.1.0"
description = "A custom made project hours management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
    "ruff>=0.9.10",
]
